@@ -36,7 +36,7 @@ public class BOOwnerController {
                         @RequestParam(value = "ownerLastname", defaultValue = "") String lastName) {
 
         int pageSize = Integer.parseInt(MAX_PAGE_SIZE);
-        int boundedPage = Math.max(1, Math.min(page, MAX_PAGE_NUMBER));
+        int boundedPage = Math.clamp(page, 1, MAX_PAGE_NUMBER);
         PageRequest pageable = PageRequest.of(boundedPage - 1, pageSize, Sort.by("creationDateTime").descending());
 
         boolean hasSearchCriteria = !email.isBlank() || !firstName.isBlank() || !lastName.isBlank();
